<resources>
    <string name="btn_close">Button Close</string>
    <string name="downline">Downline</string>
    <string name="price_plan">Price Plan</string>
    <string name="product_price_plan">Produk Price Plan</string>
    <string name="filter">Filter</string>
    <string name="deposit_cashplus">Deposit Cashplus</string>
    <string name="deposit_downline">Deposit Downline</string>
    <string name="downline_transaction">Transaksi\nDownline</string>
    <string name="total_downline">Total\nDownline</string>
    <string name="search_downline">Cari nama downline</string>
    <string name="search_product">Pencarian produk</string>
    <string name="daftar_downline">Daftar downline</string>
    <string name="active">Aktif</string>
    <string name="non_active">Tidak Aktif</string>
    <string name="kode_provider">Kode Provider</string>
    <string name="kode_produk">Kode Produk</string>
    <string name="all_category">Semua Kategori</string>
    <string name="category">Kategory</string>
    <string name="markup">Markup</string>
    <string name="main_markup">Markup Utama</string>
    <string name="keterangan">Keterangan</string>
    <string name="input_keterangan">Masukkan keterangan price plan</string>
    <string name="register_downline">Register Downline</string>
    <string name="nama_akun">Nama Akun</string>
    <string name="msidn">MSIDN</string>
    <string name="alamat">Alamat</string>
    <string name="saldo">Deposit</string>
    <string name="nama_owner">Nama Owner</string>
    <string name="jml_transaksi">Jml Transaksi</string>
    <string name="reset_markup">Reset Markup</string>
    <string name="setting_markup_successfully">Pengaturan markup produk berhasil</string>
    <string name="desc_set_markup_all_product_from_downline">Ubah markup semua produk untuk downline <b>%1$s</b></string>
    <string name="desc_set_markup_product_price_plan">Ubah markup produk <b>%1$s</b> dari price plan <b>%2$s</b></string>
    <string name="reset_markup_successfully">Reset Markup Berhasil</string>
    <string name="setting_all_markup_successfully">Perubahan markup semua produk untuk downline <b>%1$s</b> berhasil</string>
    <string name="markup_all">Markup All</string>
    <string name="next_set_markup">Lanjut atur markup</string>
    <string name="atur_markup">Atur Markup</string>
    <string name="pilihan_lainnya">Pilihan Lainnya</string>
    <string name="pilih_markup">Pilih Markup</string>
    <string name="markup_semua_produk">Markup semua produk</string>
    <string name="reset_semua_markup_downline_anda">Reset semua markup downline anda</string>
    <string name="input_markup">Masukkan nilai markup</string>
    <string name="cek_mutasi_downline">Cek Mutasi Downline</string>
    <string name="summary_transfer">Summary Transfer</string>
    <string name="daftar_sub_downline_dari">Daftar sub downline dari</string>
    <string name="check_sub_downline">Check Sub Downline</string>
    <string name="nominal_biaya_yang_akan_diterima">Nominal biaya yang akan diterima</string>
    <string name="masukkan_nominal">Masukkan nominal</string>
    <string name="qr_terima_saldo">QR Terima Deposit</string>
    <string name="desc_qr_code">Tunjukkan kode qr dibawah ini kepada agen untuk menyelesaikan transaksi anda.</string>
    <string name="kadaluarsa_pada">Kadaluarsa pada</string>
    <string name="perbarui_qr">Perbarui QR</string>
    <string name="pilih_metode_transfer_saldo">Pilih metode transfer deposit</string>
    <string name="scan_qr">Scan QR</string>
    <string name="manual_transfer">Manual Transfer</string>
    <string name="set_markup_products_from_price_plan_successfully">Perubahan markup produk untuk price plan <b>%1$s</b> berhasil</string>
    <string name="change_markup">Ubah Markup</string>
    <string name="downline_not_found">DownLine tidak ditemukan</string>
    <string name="default_markup_plan">Default</string>
    <string name="price_plan_isempty">Price Plan Kosong</string>
    <string name="price_plan_empty_desc">Saat ini price plan masih kosong,\nsilahkan buat price plan terlebih dahulu.</string>
    <string name="create_price_plan">Buat price plan</string>
    <string name="change_price_plan">Ubah price plan</string>
    <string name="name_price_plan_cannot_changed">Nama price plan tidak bisa dirubah</string>
    <string name="product_havent_added">Produk Belum\nDitambahkan</string>
    <string name="add_product">Tambah produk</string>
    <string name="adding_product">Tambahkan produk</string>
    <string name="already_added">Sudah ditambahkan</string>
    <string name="count_product_added">%1$s Produk ditambahkan</string>
    <string name="product_havent_added_desc">Saat ini price plan <b>%1$s</b> masih\nbelum ada produk yang ditambahkan</string>
    <string name="price_plan_already_exist">Nama price plan \"%1$s\" sudah tersedia di dalam daftar</string>
    <string name="search_price_plan">Cari price plan</string>
    <string name="name_price_plan">Nama price plan</string>
    <string name="name_price_plan_example">Contoh: Master Plan</string>
    <string name="find_product_please">Silahkan cari produk yang ingin anda beri markup</string>
    <string name="create_price_plan_guide">Setelah membuat price plan, silahkan atur markup produk.</string>
    <string name="create_price_plan_successfully">Price plan berhasil dibuat dengan nama\n<b>%1$s</b></string>
    <string name="add_product_create_price_plan_successfully">Pengaturan markup berhasil ditambahkan ke price plan <b>%1$s</b></string>
    <string name="edit_price_plan_successfully">Price plan dengan nama <b>%1$s</b> berhasil diperbarui</string>
    <string name="edit_product_markup_price_plan_successfully">Markup dari <b>%1$s</b> berhasil diubah</string>
    <string name="edit_product_price_plan_successfully">Produk <b>%1$s</b> dari price plan <b>%2$s</b> berhasil diubah</string>
    <string name="apply_price_plan_successfully">Price plan <b>%1$s</b> berhasil diterapkan ke downline\n<b>%2$s</b></string>
    <string name="unapply_price_plan_successfully">Price plan <b>%1$s</b> pada downline <b>%2$s</b> berhasil diputus</string>
    <string name="delete_price_plan">Hapus price plan?</string>
    <string name="delete_product_price_plan">Hapus produk price plan</string>
    <string name="delete_price_plan_confirm">Apakah anda yakin ingin menghapus price plan <b>%1$s</b></string>
    <string name="delete_product_price_plan_confirm">Apakah anda yakin ingin menghapus produk <b>%1$s</b> dari price plan <b>%2$s</b></string>
    <string name="delete_product_price_plan_successfully">Produk <b>%1$s</b> dari price plan <b>%2$s</b> berhasil dihapus</string>
    <string name="delete_price_plan_successfully">Price plan <b>%1$s</b> berhasil dihapus</string>
    <string name="markup_value_required">Nilai markup tidak boleh kosong!</string>
    <string name="confirm_unapply_markup_plan">Apakah anda yakin ingin menanggal price plan <b>%1$s</b> dari downline <b>%2$s</b></string>
    <string name="confirm_close_layout">Apakah anda yakin ingin meninggalkan halaman ini?</string>
    <string name="markup_max_policy">Pengambilan markup tidak boleh melebihi Rp. 500</string>
    <string name="input_code_markup_length_error">Panjang nama markup melebihi 20 karakter</string>
    <string name="input_desc_length_error">Panjang deskripsi melebihi 50 karakter</string>
    <string name="search_price_plan_not_found_desc">Pastikan kata kunci yang dimasukkan\nsesuai dengan nama price plan anda</string>
    <string name="downline_is_not_active">Downline %1$s sedang tidak aktif</string>
</resources>