<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".priceplan.SetMarkupProduct">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_top"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="15sp"
            android:text="@string/change_markup"
            android:textColor="#475569"
            app:layout_constraintBottom_toBottomOf="@id/icon_close"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/icon_close"
            android:layout_width="@dimen/dimen_28"
            android:layout_height="@dimen/dimen_28"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/close_icon_red"
            android:contentDescription="@string/btn_close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:text="@string/desc_set_markup_product_price_plan"
            android:textColor="#64748B"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/edt_set_markup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_42"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:paddingHorizontal="@dimen/dimen_12"
            android:background="@drawable/bg_white_border_slate200_rounded_10"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:hint="@string/input_markup"
            android:textColor="#1E293B"
            android:textColorHint="#94A3B8"
            android:inputType="number"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/txtLabel"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_38"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_28"
            android:layout_marginHorizontal="@dimen/dimen_16"
            android:paddingVertical="0dp"
            android:background="@drawable/background_button_state"
            android:textSize="13sp"
            android:text="@string/submit"
            android:textColor="@drawable/color_indicator_state"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/edt_set_markup"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>