<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".detail.DetailDownLineActivity">

    <com.pasukanlangit.id.core.presentation.components.AppBarWithIconBackView
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_app_bar"
        app:title="Downline"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_is_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:visibility="gone"
                tools:visibility="visible"
                android:textColor="#0C965A"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginStart="@dimen/dimen_12"
                android:paddingVertical="@dimen/dimen_6"
                android:paddingHorizontal="@dimen/dimen_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/bg_green_light_rounded"/>

            <TextView
                android:id="@+id/tv_is_not_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_active"
                android:visibility="gone"
                tools:visibility="visible"
                android:textColor="#FF3822"
                android:paddingVertical="@dimen/dimen_6"
                android:paddingHorizontal="@dimen/dimen_24"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginStart="@dimen/dimen_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/bg_red50_rounded_12"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wrapper_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginHorizontal="@dimen/dimen_12"
                app:layout_constraintTop_toBottomOf="@id/tv_is_active">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_ver_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".5"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_6"
                    android:text="@string/nama_akun"
                    android:textColor="#64748B"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_6"
                    android:fontFamily="@font/poppins_semibold"
                    tools:text="@string/nama_akun"
                    android:textColor="#334155"
                    app:layout_constraintEnd_toStartOf="@id/guide_ver_center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_12"
                    android:text="@string/msidn"
                    android:textColor="#64748B"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_6"
                    android:fontFamily="@font/poppins_semibold"
                    tools:text="@string/nama_akun"
                    android:textColor="#334155"
                    app:layout_constraintEnd_toStartOf="@id/guide_ver_center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_12"
                    android:text="@string/alamat"
                    android:textColor="#64748B"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_6"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="#334155"
                    app:layout_constraintEnd_toStartOf="@id/guide_ver_center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    tools:text="@string/nama_akun" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_12"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/saldo"
                    android:textColor="#64748B"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_address" />

                <TextView
                    android:id="@+id/tv_saldo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_6"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="#334155"
                    app:layout_constraintEnd_toStartOf="@id/guide_ver_center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    tools:text="@string/nama_akun" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_6"
                    android:text="@string/nama_owner"
                    android:textColor="#64748B"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guide_ver_center"/>

                <TextView
                    android:id="@+id/tv_owner_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_6"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="#334155"
                    app:layout_constraintStart_toEndOf="@id/guide_ver_center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13"
                    tools:text="@string/nama_akun" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_12"
                    android:layout_marginStart="@dimen/dimen_6"
                    android:text="@string/jml_transaksi"
                    android:textColor="#64748B"
                    app:layout_constraintStart_toEndOf="@id/guide_ver_center"
                    app:layout_constraintTop_toBottomOf="@+id/tv_owner_name" />

                <TextView
                    android:id="@+id/tv_trx_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_6"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="#334155"
                    app:layout_constraintStart_toEndOf="@id/guide_ver_center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView14"
                    tools:text="@string/nama_akun" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_12"
                    android:layout_marginStart="@dimen/dimen_6"
                    android:text="@string/markup"
                    android:textColor="#64748B"
                    app:layout_constraintStart_toEndOf="@id/guide_ver_center"
                    app:layout_constraintTop_toBottomOf="@+id/tv_trx_count" />

                <TextView
                    android:id="@+id/tv_markup_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_6"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="#334155"
                    app:layout_constraintStart_toEndOf="@id/guide_ver_center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15"
                    tools:text="@string/nama_akun" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_12"
                    android:layout_marginStart="@dimen/dimen_6"
                    android:text="@string/downline"
                    android:textColor="#64748B"
                    app:layout_constraintStart_toEndOf="@id/guide_ver_center"
                    app:layout_constraintTop_toBottomOf="@+id/tv_markup_count" />

                <TextView
                    android:id="@+id/tv_downline_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_6"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="#334155"
                    app:layout_constraintStart_toEndOf="@id/guide_ver_center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16"
                    tools:text="@string/nama_akun" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>